--- a/Minimalistic_MVC5/Minimalistic_MVC5.csproj
+++ b/Minimalistic_MVC5/Minimalistic_MVC5.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Models\Role.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Repository.cs" />
+    <Compile Include="Services\ResourceRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\" />
